apply code format